--- a/prompt.html
+++ b/prompt.html
@@ -13,7 +13,7 @@
 
 		header {
 			background-color: #007bff;
-			color: #fff;
+			color: #000000;
 			padding: 20px;
 			text-align: center;
 		}
@@ -120,30 +120,48 @@
 			font-size: 18px;
 			margin: 0;
 		}
+		/* 帮助按钮CSS */
+		#helpTooltip {
+			display: none;
+			position: absolute;
+			background-color: #f0f0f0;
+			padding: 10px;
+			border: 1px solid #ccc;
+			border-radius: 5px;
+			box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+			text-align: left;
+		}
+
+		#helpButton {
+			cursor: pointer;
+			background-color: transparent; /* 设置背景透明 */
+			border: none; /* 移除边框 */
+			outline: none; /* 移除默认的轮廓样式 */
+		}
+
+		/* 帮助按钮CSS */
 	</style>
 </head>
 <body>
 	<header>
-		<h1>Midjourney Prompt Generator</h1>
+		<button id="helpButton"><h1>Midjourney Prompt Generator</h1></button>
+		<div id="helpTooltip">
+			<pre>
+			如何组合提示词一
+			主体描述: 一句话告诉AI你要描述的画面，修饰词+主体+场景+动作
+			环境场景: 你想象的主体所处的环境，光线，氛围，色系
+			艺术风格: 设计风格/艺术家名字/漫画影视作品/艺术网站
+			媒介材料: 油画/水彩/摄影/手稿/雕塑/陶瓷/布料/黏士/石头
+			摄像机视角: 特写视图/两点透视/广角镜头/景深/正视图/全身照
+			作品精度定义: 高品质/超级细节/复杂细节/高分辦率/HD/2K/4K/尺寸比例
+			如果是3D渲染: 再加上3D软件＋渲染器＋材质＋光照＋逼真的渲染风格
+
+			如何组合提示词二
+			</pre>
+		</div>
 	</header>
 
 <div class="container">
-	<div class="category">
-		<h2>整体定制</h2>
-		<label><input type="radio" name="customization" value="【此处修改为垫图链接】, cartoon, PIXAR STYLE, 8k, --s 750 --niji 5">皮克斯卡通头像</label>
-		<br>
-		<label><input type="radio" name="customization" value="studio Ghibli,Blueberry,flowerRich details,【此处修改为图像主题的动作或行为描述】">宫崎骏风格插画</label>
-		<label><input type="radio" name="customization" value="At night, 【此处修改为图像主题的动作或行为描述】, surrounded by fireflies, the moonlight is very bright, carrying a lantern, Chinese style, c4d, octane render, atmosphere, high-quality pictures, 3d art, animation lighting, Pixar trend">皮克斯动画</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】made of Lego,domsday survival,8k,HD,cinematography,photorealistic,epic,compositio">乐高风格场景</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】,clean bright and undersea world background,dreamy,excited,lP by pop mart,high detail,hyper quality, Bright color, mockup blind box toy, disney style,fine luster,3D render, oc render,best quality,8kbrightfront lighting,Face Shotfine luster,ultra detoiled --ar 3:4">卡通泡泡玛特人偶</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】cyberpunk clothing::0.6, cartoon, disney style,surrounded by neon - lit cityscape reflections, vray render, ray tracing, subsurface scattering">赛博朋克风</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】,holographic,sincere,opre,smooth surface,colorful transparent plastic,designed by dieter rams,high detail,4k,industrial design,white background,solid,profile,sleek glass thickness,studio lighting,4K --ar 3:4">缤纷/霓虹系列</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】,3d blender render,soft smooth lighting,science and technology background,100mm lens,4k UHD,isometric,tilt-shift --ar 3:4">微缩场景</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像场景内包含的物体名称逗号隔开】,Game Asset style in a low poly model,isometric,tilt-shift,16bit pixel art 16,trendy IP by pop mart,IP mockup,blind box toy,fine luster,white background,3D render,oc render,4K,best quality,ultra detailed,night light --ar 3:4">轴测图立体场景</label>
-		<label><input type="radio" name="customization" value="environment design by Adriaen van de VenneAlien,planets, deserts, giant technological structures,【此处修改为图像主题的动作或行为描述】">外太空黄土行星风</label>
-		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】">待添加</label>
-	</div>
-
 	<div class="category">
 		<h2>场景</h2>
 		<label><input type="checkbox" name="scenes" value="The Hanging Gardens">空中花园</label>
@@ -564,11 +582,33 @@
 </div>
 
 <script>
+// 帮助按钮JavaScript
+document.addEventListener('DOMContentLoaded', function () {
+    const helpButton = document.getElementById('helpButton');
+    const helpTooltip = document.getElementById('helpTooltip');
+
+    helpButton.addEventListener('mouseover', function () {
+        showTooltip();
+    });
+
+    helpButton.addEventListener('mouseout', function () {
+        hideTooltip();
+    });
+
+    function showTooltip() {
+        helpTooltip.style.display = 'block';
+    }
+
+    function hideTooltip() {
+        helpTooltip.style.display = 'none';
+    }
+});
+// 帮助按钮JavaScript
+
 	const generatePromptButton = document.querySelector('.btn');
 const promptOutput = document.querySelector('.prompt p');
 
 generatePromptButton.addEventListener('click', () => {
-const customizationCheckboxes = document.querySelectorAll('input[name="customization"]:checked');
 const sceneCheckboxes = document.querySelectorAll('input[name="scenes"]:checked');
 const styleCheckboxes = document.querySelectorAll('input[name="styles"]:checked');
 const viewCheckboxes = document.querySelectorAll('input[name="views"]:checked');
@@ -582,7 +622,6 @@ const artCheckboxes = document.querySelectorAll('input[name="art"]:checked');
 const modelStyleCheckboxes = document.querySelectorAll('input[name="modelStyle"]:checked');
 const modelversionCheckboxes = document.querySelectorAll('input[name="modelversion"]:checked');
 
-const customizations = getValuesFromCheckboxes(customizationCheckboxes);
 const scenes = getValuesFromCheckboxes(sceneCheckboxes);
 const styles = getValuesFromCheckboxes(styleCheckboxes);
 const views = getValuesFromCheckboxes(viewCheckboxes);
@@ -595,7 +634,7 @@ const scales = getValuesFromCheckboxes(scaleCheckboxes);
 const arts = getValuesFromCheckboxes(artCheckboxes);
 const modelStyles = getValuesFromCheckboxes(modelStyleCheckboxes);
 const modelversions = getValuesFromCheckboxes(modelversionCheckboxes);
-const prompt = customizations.concat(scenes, styles,views,lights,lens, cameras).join(',');
+const prompt = scenes.concat(styles,views,lights,lens, cameras).join(',');
 const parameter = similaritys.concat(scales, arts, modelStyles, modelversions).join(' ');
 let result = prompt + ', ' + parameter;
 promptOutput.textContent = result;
