--- a/customization.html
+++ b/customization.html
@@ -157,6 +157,13 @@
 			如果是3D渲染: 再加上3D软件＋渲染器＋材质＋光照＋逼真的渲染风格
 
 			如何组合提示词二
+			主题：人、动物、人物、地点、物体等。
+			媒介：照片、绘画、插图、雕塑、涂鸦、挂毯等。
+			环境：室内、室外、月球上、纳尼亚、水下、翡翠城等。
+			颜色：充满活力、柔和、明亮、单色、彩色、黑白、柔和等。
+			照明：柔和、环境、阴天、霓虹灯、工作室灯等
+			情绪：稳重、平静、喧闹、精力充沛等。
+			构图：肖像、头像、特写、鸟瞰图等。
 			</pre>
 		</div>
 	</header>
