--- a/customization.html
+++ b/customization.html
@@ -170,9 +170,93 @@
 
 <div class="container">
 	<div class="category">
-		<h2>整体定制</h2>
-		<label><input type="radio" name="customization" value="【此处修改为垫图链接】, cartoon, PIXAR STYLE, 8k, --s 750 --niji 5">皮克斯卡通头像</label>
-		<br>
+		<h2>风格选择</h2>
+		<label><input type="radio" name="customization" value=", cartoon boy, PIXAR STYLE, 8k, --ar 2:3 --s 750 --niji 5">♂皮克斯卡通v5</label>
+		<label><input type="radio" name="customization" value=", cartoon girl, PIXAR STYLE, 8k, --ar 2:3 --s 750 --niji 5">♀皮克斯卡通v5</label>
+		<label><input type="radio" name="customization" value=", cartoon boy, PIXAR STYLE, 8k, --ar 2:3 --s 750 --niji 6">♂皮克斯卡通v6</label>
+		<label><input type="radio" name="customization" value=", cartoon girl, PIXAR STYLE, 8k, --ar 2:3 --s 750 --niji 6">♀皮克斯卡通v6</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Tradition Chinese Ink Painting , 8k, --ar 2:3 --s 750 --niji 6">♂东方山水画</label>
+		<label><input type="radio" name="customization" value=", cartoon girl, Tradition Chinese Ink Painting , 8k, --ar 2:3 --s 750 --niji 6">♀东方山水画</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Japanese Ukiyo-e , 8k, --ar 2:3 --s 750 --niji 6">♂浮世绘</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Japanese Ukiyo-e , 8k, --ar 2:3 --s 750 --niji 6">♀浮世绘</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Japanese comics/manga , 8k, --ar 2:3 --s 750 --niji 6">♂日本漫画风格</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Japanese comics/manga , 8k, --ar 2:3 --s 750 --niji 6">♀日本漫画风格</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , stock illustration style , 8k, --ar 2:3 --s 750 --niji 6">♂童话故事书插图风格</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , stock illustration style , 8k, --ar 2:3 --s 750 --niji 6">♀童话故事书插图风格</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , CGSociety , 8k, --ar 2:3 --s 750 --niji 6">♂梦工厂动西风格</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , CGSociety , 8k, --ar 2:3 --s 750 --niji 6">♀梦工厂动西风格</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , DreamWorks Pictures , 8k, --ar 2:3 --s 750 --niji 6">♂梦工厂影业</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , DreamWorks Pictures , 8k, --ar 2:3 --s 750 --niji 6">♀梦工厂影业</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Fashion , 8k, --ar 2:3 --s 750 --niji 6">♂时尚</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Fashion , 8k, --ar 2:3 --s 750 --niji 6">♀时尚</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , poster of japanese graphic design , 8k, --ar 2:3 --s 750 --niji 6">♂日本海报风格</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , poster of japanese graphic design , 8k, --ar 2:3 --s 750 --niji 6">♀日本海报风格</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , 90s video game , 8k, --ar 2:3 --s 750 --niji 6">♂90年代电视游戏</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , 90s video game , 8k, --ar 2:3 --s 750 --niji 6">♀90年代电视游戏</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , french art , 8k, --ar 2:3 --s 750 --niji 6">♂法国艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , french art , 8k, --ar 2:3 --s 750 --niji 6">♀法国艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Bauhaus , 8k, --ar 2:3 --s 750 --niji 6">♂包豪斯</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Bauhaus , 8k, --ar 2:3 --s 750 --niji 6">♀包豪斯</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Anime , 8k, --ar 2:3 --s 750 --niji 6">♂日本动画片</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Anime , 8k, --ar 2:3 --s 750 --niji 6">♀日本动画片</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Vintage , 8k, --ar 2:3 --s 750 --niji 6">♂古典风18-19世纪</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Vintage , 8k, --ar 2:3 --s 750 --niji 6">♀古典风18-19世纪</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Pulp Noir , 8k, --ar 2:3 --s 750 --niji 6">♂黑白电影时期</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Pulp Noir , 8k, --ar 2:3 --s 750 --niji 6">♀黑白电影时期</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Country style , 8k, --ar 2:3 --s 750 --niji 6">♂乡村风格</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Country style , 8k, --ar 2:3 --s 750 --niji 6">♀乡村风格</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Abstract , 8k, --ar 2:3 --s 750 --niji 6">♂抽象风</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Abstract , 8k, --ar 2:3 --s 750 --niji 6">♀抽象风</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , risograph , 8k, --ar 2:3 --s 750 --niji 6">♂riso印刷风</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , risograph , 8k, --ar 2:3 --s 750 --niji 6">♀riso印刷风</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Graphic , 8k, --ar 2:3 --s 750 --niji 6">♂设计风</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Graphic , 8k, --ar 2:3 --s 750 --niji 6">♀设计风</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , ink render , 8k, --ar 2:3 --s 750 --niji 6">♂墨水渲染</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , ink render , 8k, --ar 2:3 --s 750 --niji 6">♀墨水渲染</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Ethnic Art , 8k, --ar 2:3 --s 750 --niji 6">♂民族艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Ethnic Art , 8k, --ar 2:3 --s 750 --niji 6">♀民族艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , retro dark vintage , 8k, --ar 2:3 --s 750 --niji 6">♂复古黑暗</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , retro dark vintage , 8k, --ar 2:3 --s 750 --niji 6">♀复古黑暗</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Tradition Chinese Ink Painting style , --ar 2:3 --s 750 --niji 6">♂国风</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Tradition Chinese Ink Painting style , --ar 2:3 --s 750 --niji 6">♀国风</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Steampunk , 8k, --ar 2:3 --s 750 --niji 6">♂蒸汽朋克</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Steampunk , 8k, --ar 2:3 --s 750 --niji 6">♀蒸汽朋克</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Gothic gloomy , 8k, --ar 2:3 --s 750 --niji 6">♂哥特式黑暗</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Gothic gloomy , 8k, --ar 2:3 --s 750 --niji 6">♀哥特式黑暗</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , black and white , 8k , --ar 2:3 --s 750 --niji 6">♂黑白</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , black and white , 8k , --ar 2:3 --s 750 --niji 6">♀黑白</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Unity Creations , 8k, --ar 2:3 --s 750 --niji 6">♂统一创作</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Unity Creations , 8k, --ar 2:3 --s 750 --niji 6">♀统一创作</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Baroque , 8k , --ar 2:3 --s 750 --niji 6">♂巴洛克时期</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Baroque , 8k , --ar 2:3 --s 750 --niji 6">♀巴洛克时期</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Impressionism , 8k , --ar 2:3 --s 750 --niji 6">♂印象派</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Impressionism , 8k , --ar 2:3 --s 750 --niji 6">♀印象派</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Art Nouveau , 8k , --ar 2:3 --s 750 --niji 6">♂新艺术风格</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Art Nouveau , 8k , --ar 2:3 --s 750 --niji 6">♀新艺术风格</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Rococo , 8k, --ar 2:3 --s 750 --niji 6">♂新艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Rococo , 8k, --ar 2:3 --s 750 --niji 6">♀新艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Renaissance , 8k, --ar 2:3 --s 750 --niji 6">♂文艺复兴</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Renaissance , 8k, --ar 2:3 --s 750 --niji 6">♀文艺复兴</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Cubism , 8k, --ar 2:3 --s 750 --niji 6">♂立体派</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Cubism , 8k, --ar 2:3 --s 750 --niji 6">♀立体派</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , OP Art /Optical Art , 8k , --ar 2:3 --s 750 --niji 6">♂欧普艺术/光效应艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , OP Art /Optical Art , 8k , --ar 2:3 --s 750 --niji 6">♀欧普艺术/光效应艺术</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Victorian , 8k , --ar 2:3 --s 750 --niji 6">♂维多利亚时代</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Victorian , 8k , --ar 2:3 --s 750 --niji 6">♀维多利亚时代</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , futuristic , 8k, --ar 2:3 --s 750 --niji 6">♂未来主义</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , futuristic , 8k, --ar 2:3 --s 750 --niji 6">♀未来主义</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , Minimalist , 8k , --ar 2:3 --s 750 --niji 6">♂极简主义</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , Minimalist , 8k , --ar 2:3 --s 750 --niji 6">♀极简主义</label>
+		<label><input type="radio" name="customization" value=", cartoon boy , botw , 8k , --ar 2:3 --s 750 --niji 6">♂旷野之息</label>
+		<label><input type="radio" name="customization" value=", cartoon girl , botw , 8k , --ar 2:3 --s 750 --niji 6">♀旷野之息</label>
+		<label><input type="radio" name="customization" value="">♂</label>
+		<label><input type="radio" name="customization" value="">♀</label>
+		<label><input type="radio" name="customization" value="">♂</label>
+		<label><input type="radio" name="customization" value="">♀</label>
+	</div>
+
+	<div class="category">
+		<h2>其它</h2>
 		<label><input type="radio" name="customization" value="studio Ghibli,Blueberry,flowerRich details,【此处修改为图像主题的动作或行为描述】">宫崎骏风格插画</label>
 		<label><input type="radio" name="customization" value="At night, 【此处修改为图像主题的动作或行为描述】, surrounded by fireflies, the moonlight is very bright, carrying a lantern, Chinese style, c4d, octane render, atmosphere, high-quality pictures, 3d art, animation lighting, Pixar trend">皮克斯动画</label>
 		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】made of Lego,domsday survival,8k,HD,cinematography,photorealistic,epic,compositio">乐高风格场景</label>
