--- a/customization.html
+++ b/customization.html
@@ -381,6 +381,14 @@
 	</div>
 
 	<div class="category">
+		<h2>主推系列</h2>
+		<label><input type="radio" name="customization" value=", smiling face,Waist shot,Looking at the camera,wearing a Cinnabar yellow color scheme Chinese hanfu ,flowers, colorful, in the style of romantic soft focus and ethereal light,sunrays shine upon it, movie scene,studio light, 35mm f1.4,sandara tang, oshare kei, high details,8k --ar 3:4 --niji 6 --s 750">金秋岁月</label>
+		<label><input type="radio" name="customization" value=", the film poster for the japanese film, in the style of traditional animation, light gold and orange, full body, i can't believe how beautiful this is, colorful costumes, abigail larson, mosaic-like --iw 0.5 --ar 3:4 --niji 5 --s 750">童话公主</label>
+		<label><input type="radio" name="customization" value=", a beautiful chinese girl, beautiful face, ancient hair bun, long hair, white dress, white skin,fairy style, surrounded by bamboo grove,green, dynamic expressive force, soft color, sunny, light and shadow, gentle abstract painting, 8k --iw 0.5 --ar 3:4 --niji 5 --s 750">中国古风</label>
+		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】">待添加</label>
+	</div>
+
+	<div class="category">
 		<h2>其它</h2>
 		<label><input type="radio" name="customization" value="studio Ghibli,Blueberry,flowerRich details,【此处修改为图像主题的动作或行为描述】">宫崎骏风格插画</label>
 		<label><input type="radio" name="customization" value="At night, 【此处修改为图像主题的动作或行为描述】, surrounded by fireflies, the moonlight is very bright, carrying a lantern, Chinese style, c4d, octane render, atmosphere, high-quality pictures, 3d art, animation lighting, Pixar trend">皮克斯动画</label>
