--- a/customization.html
+++ b/customization.html
@@ -381,6 +381,35 @@
 	</div>
 
 	<div class="category">
+		<h2>十二生肖系列</h2>
+		<label><input type="radio" name="customization" value=", A gigantic mouse gently nibbles on the top of a boy head, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A gigantic mouse gently nibbles on the top of a girl head, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♀鼠&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy riding on the back of a cow, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl riding on the back of a cow, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♀牛&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy leaning against the side of a tiger, Waist Shot(WS), snow, watercolor style --iw 0.5 --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl leaning against the side of a tiger, Waist Shot(WS), snow, watercolor style --iw 0.5 --ar 2:3 --niji 6 --s 750">♀虎&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy is holding several rabbits, er, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl is holding several rabbits, er, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♀兔&emsp;</label>
+		<label><input type="radio" name="customization" value=", A Chinese dragon coils around the boy head during, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A Chinese dragon coils around the girl head during, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♀龙&emsp;</label>
+		<label><input type="radio" name="customization" value=", Several adorable little snakes are coiled around the boy body, head, and feet, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", Several adorable little snakes are coiled around the girl body, head, and feet, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♀蛇&emsp;</label>
+		<br>
+		<label><input type="radio" name="customization" value=", A boy riding on the back of a horse is galloping, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl riding on the back of a horse is galloping, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♀马&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy stands among the flock of sheep, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl stands among the flock of sheep, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♀羊&emsp;</label>
+		<label><input type="radio" name="customization" value=", A little monkey is performing on a boy arm, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A little monkey is performing on a girl arm, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♀猴&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy is chasing a group of chicks, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl is chasing a group of chicks, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♀鸡&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy is holding a small dog, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl is holding a small dog, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 6 --s 750">♀狗&emsp;</label>
+		<label><input type="radio" name="customization" value=", A boy is chasing a group of piglets, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♂</label>
+		<label><input type="radio" name="customization" value=", A girl is chasing a group of piglets, Waist Shot(WS), snow, watercolor style --ar 2:3 --niji 5 --s 750">♀猪&emsp;</label>
+	</div>
+
+	<div class="category">
 		<h2>主推系列</h2>
 		<label><input type="radio" name="customization" value=", smiling face,Waist shot,Looking at the camera,wearing a Cinnabar yellow color scheme Chinese hanfu ,flowers, colorful, in the style of romantic soft focus and ethereal light,sunrays shine upon it, movie scene,studio light, 35mm f1.4,sandara tang, oshare kei, high details,8k --ar 3:4 --niji 6 --s 750">金秋岁月</label>
 		<label><input type="radio" name="customization" value=", the film poster for the japanese film, in the style of traditional animation, light gold and orange, full body, i can't believe how beautiful this is, colorful costumes, abigail larson, mosaic-like --iw 0.5 --ar 3:4 --niji 5 --s 750">童话公主</label>
