--- a/customization.html
+++ b/customization.html
@@ -414,7 +414,9 @@
 		<label><input type="radio" name="customization" value=", smiling face,Waist shot,Looking at the camera,wearing a Cinnabar yellow color scheme Chinese hanfu ,flowers, colorful, in the style of romantic soft focus and ethereal light,sunrays shine upon it, movie scene,studio light, 35mm f1.4,sandara tang, oshare kei, high details,8k --ar 3:4 --niji 6 --s 750">金秋岁月</label>
 		<label><input type="radio" name="customization" value=", the film poster for the japanese film, in the style of traditional animation, light gold and orange, full body, i can't believe how beautiful this is, colorful costumes, abigail larson, mosaic-like --iw 0.5 --ar 3:4 --niji 5 --s 750">童话公主</label>
 		<label><input type="radio" name="customization" value=", a beautiful chinese girl, beautiful face, ancient hair bun, long hair, white dress, white skin,fairy style, surrounded by bamboo grove,green, dynamic expressive force, soft color, sunny, light and shadow, gentle abstract painting, 8k --iw 0.5 --ar 3:4 --niji 5 --s 750">中国古风</label>
+		<label><input type="radio" name="customization" value="，highly details, hyper-detailing,8k ，KIDS ILLUSTRATION，Chubby dragon girl，Colorful cartoon characters，Cute dragons，white backgrounid，Colorful cartoon characters，Chinese red costume，Light，Red vibe，a sticker， --s 750 --niji 5">喜庆龙年</label>
 		<label><input type="radio" name="customization" value="【此处修改为图像主题的动作或行为描述】">待添加</label>
+		
 	</div>
 
 	<div class="category">
